# 5sem

./: .gitignore
5semester/DB/: conrol.txt
5semester/DB/lab1/: MyStart.sql
5semester/DB/lab10/: lab10.sql  Теория №10.docx
5semester/DB/lab11/: lab11.sql
5semester/DB/lab12/: lab12.sql
5semester/DB/lab13/: lab13.sql
5semester/DB/lab14/: lab14.sql
5semester/DB/lab2/: Lab2.sql
5semester/DB/lab3/: lab3.sql
5semester/DB/lab4/: lab4.sql  report.docx
5semester/DB/lab5/: lab5.sql
5semester/DB/lab6/: lab6.sql  Теория №6.docx
5semester/DB/lab7/: lab7.sql
5semester/DB/lab8/: lab8.sql  report.docx
5semester/DB/lab9/: lab9.sql  Теория №9.docx
5semester/Kursach/: List_zadania_Korneliuk.docx
5semester/Kursach/docs/: Пояснительная_записка_Корнелюк.docx
5semester/Kursach/scripts/: ExportImport.sql  FillTable.sql  a.json  defaultdomains.xml  diagram.dmd  pdb_creation.sql  proc_creation_cursors.sql  proc_func_creation.sql  sch.dmd  tables_creation.sql
5semester/LifeSafety/: lections.docx
5semester/Node/lab1/: task2.js  task3.js
5semester/Node/lab2/: 02-02.js  jquery.html
5semester/Node/lab3/: 03-02.js  03-05.js  (+1 more)
5semester/PSCP/: package-lock.json  package.json
5semester/SP/: ЛР4.docx  ЛР5.docx
5semester/SystemProgramming/lab8/dll-cmakeVictim/MainProject/src/: CMakeLists.txt  Lab-08b.c
5semester/SystemProgramming/linux/lab8/so-cmake/: CMakeLists.txt
5semester/SystemProgramming/linux/lab8/so-cmake/LibProject/src/: CMakeLists.txt  Mappingd.c
5semester/SystemProgramming/linux/lab8/so-cmake/MainProject/src/: CMakeLists.txt  Lab-08d.c
(+1465 files in other folders)
